# riscv-student-pack

./: .clang-format  .gitignore  README.md
assembler/: CMakeLists.txt
assembler/include/: assembler.hpp  ast.hpp  elf_writer.hpp  lexer.hpp  mnemonic_handler.hpp  parser.hpp
assembler/src/: assembler.cpp  elf_writer.cpp  lexer.cpp  main.cpp  mnemonic_handler.cpp  parser.cpp
emulator/: CMakeLists.txt
emulator/include/: cpu.hpp  elf.hpp  emulator.hpp  instruction_handler.hpp  memory.hpp  rv32i_handler.hpp
emulator/src/: cpu.cpp  elf.cpp  emulator.cpp  main.cpp  memory.cpp  rv32i_handler.cpp
